--- a/.github/workflows/create-gist.yml
+++ b/.github/workflows/create-gist.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    - uses: popsiclestick/gist-sync-action@v1.0.0
       with: 
         auth: ${{ secrets.GIST_TOKEN }}
         gist_url: https://gist.github.com/augle/sample
