Sample test gist

--- a/.github/workflows/create-gist.yml
+++ b/.github/workflows/create-gist.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: popsiclestick/gist-sync-action@v1.0.0
       with: 
         auth: ${{ secrets.GIST_TOKEN }}
-        gist_url: https://gist.github.com/bhaskarbandru/sample:ewe:weqwa
+        gist_url: https://gist.github.com/bhaskarbandru/sampleeweweqwa
         gist_title: Example Gist Title
         gist_description: Example Gist Description
-        github_file: filename-to-sync
+        github_file: woodley-town-center.json
